# ontology_mapping

./: .gitignore  README.md  experiments.ipynb  main.py  pyproject.toml
data/: neural_column_mapping_medium_metadata.json  neural_column_mapping_medium_test.csv  neural_column_mapping_medium_val.csv
src/: production_dataset_gen.py  two_stage_prod_data_gen.py
src/simple_siamese/: simple_siamese_README.md
src/two_stage_siamese/: predict_two_stage_siamese.py  train_two_stage_siamese.py  two_stage_prod_data_gen.py
two_stage_datasets/: domain_metadata.json  final_two_step_test.csv  stage1_calibration.csv  stage1_train.csv  stage1_val.csv  stage2_calibration.csv  stage2_val.csv
